refactor: inventory without test