@@ -3,35 +3,43 @@ package fpt.qn.mes.inventory.application.service;
 import java.math.BigDecimal;
 import java.time.Instant;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import fpt.qn.mes.auth.application.port.out.CurrentUserPort;
 import fpt.qn.mes.common.dto.response.PageResponse;
-import fpt.qn.mes.inventory.application.dto.response.StockTransferResponse;
-import fpt.qn.mes.inventory.application.dto.stockmovement.create.StockTransferRequest;
 import fpt.qn.mes.common.util.UuidV7;
+import fpt.qn.mes.inventory.application.dto.response.StockTransferResponse;
+import fpt.qn.mes.inventory.application.dto.stockadjustment.create.CreateStockAdjustmentRequest;
+import fpt.qn.mes.inventory.application.dto.stockadjustmentapproval.StockAdjustmentApprovalResponse;
+import fpt.qn.mes.inventory.application.dto.stockbalance.StockBalanceResponse;
+import fpt.qn.mes.inventory.application.dto.stockbalance.search.StockBalanceSearchRequest;
+import fpt.qn.mes.inventory.application.dto.stockmovement.StockMovementResponse;
+import fpt.qn.mes.inventory.application.dto.stockmovement.create.CreateStockMovementRequest;
+import fpt.qn.mes.inventory.application.dto.stockmovement.create.StockInRequest;
+import fpt.qn.mes.inventory.application.dto.stockmovement.create.StockTransferRequest;
+import fpt.qn.mes.inventory.application.dto.stockmovement.search.StockMovementSearchRequest;
 import fpt.qn.mes.inventory.application.exception.InsufficientStockException;
 import fpt.qn.mes.inventory.application.exception.InvalidStockAdjustmentException;
 import fpt.qn.mes.inventory.application.exception.InvalidStockLotException;
 import fpt.qn.mes.inventory.application.exception.InventoryNotFoundException;
-import fpt.qn.mes.inventory.application.exception.StockLotConflictException;
-import fpt.qn.mes.inventory.application.exception.StockLotNotFoundException;
 import fpt.qn.mes.inventory.application.mapper.InventoryDtoMapper;
 import fpt.qn.mes.inventory.application.mapper.StockAdjustmentApprovalDtoMapper;
 import fpt.qn.mes.inventory.application.port.in.InventoryUseCase;
+import fpt.qn.mes.inventory.application.port.out.ProductCheckPort;
+import fpt.qn.mes.inventory.application.port.out.WarehouseCheckPort;
+import fpt.qn.mes.inventory.application.port.out.WarehouseLocationCheckPort;
+import fpt.qn.mes.inventory.application.port.out.WarehouseLocationQueryPort;
 import fpt.qn.mes.inventory.domain.constants.MovementTypeConstants;
 import fpt.qn.mes.inventory.domain.constants.StockStatusConstants;
 import fpt.qn.mes.inventory.domain.entities.StockAdjustmentApproval;
 import fpt.qn.mes.inventory.domain.entities.StockBalance;
 import fpt.qn.mes.inventory.domain.entities.StockLot;
 import fpt.qn.mes.inventory.domain.entities.StockMovement;
-import fpt.qn.mes.inventory.domain.repository.LotTypeRepository;
 import fpt.qn.mes.inventory.domain.repository.MovementTypeRepository;
 import fpt.qn.mes.inventory.domain.repository.StockAdjustmentApprovalRepository;
 import fpt.qn.mes.inventory.domain.repository.StockBalanceRepository;
@@ -40,107 +48,31 @@ import fpt.qn.mes.inventory.domain.repository.StockMovementRepository;
 import fpt.qn.mes.inventory.domain.repository.StockStatusRepository;
 import fpt.qn.mes.inventory.domain.repository.criteria.StockAdjustmentApprovalSearchCriteria;
 import fpt.qn.mes.inventory.domain.repository.criteria.StockBalanceSearchCriteria;
-import fpt.qn.mes.inventory.domain.repository.criteria.StockLotSearchCriteria;
 import fpt.qn.mes.inventory.domain.repository.criteria.StockMovementSearchCriteria;
-import fpt.qn.mes.master.location.application.port.in.WarehouseLocationUseCase;
-import fpt.qn.mes.master.product.application.port.in.ProductUseCase;
-import fpt.qn.mes.master.warehouse.application.port.in.WarehouseUseCase;
-import fpt.qn.mes.user.domain.entities.User;
-import fpt.qn.mes.user.domain.repository.UserRepository;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
-import lombok.extern.slf4j.Slf4j;
-
-import fpt.qn.mes.inventory.application.dto.stockadjustmentapproval.StockAdjustmentApprovalResponse;
-import fpt.qn.mes.inventory.application.dto.stocklot.create.CreateStockLotRequest;
-import fpt.qn.mes.inventory.application.dto.stocklot.search.StockLotSearchRequest;
-import fpt.qn.mes.inventory.application.dto.warehouse.WarehouseResponse;
-import fpt.qn.mes.inventory.application.dto.product.ProductResponse;
-
-import fpt.qn.mes.inventory.application.dto.stockmovement.create.CreateStockMovementRequest;
-import fpt.qn.mes.inventory.application.dto.stockadjustment.create.CreateStockAdjustmentRequest;
-import fpt.qn.mes.inventory.application.dto.stockmovement.create.StockInRequest;
-import fpt.qn.mes.inventory.application.dto.user.UserResponse;
-import fpt.qn.mes.inventory.application.dto.warehouse.WarehouseLocationResponse;
-import fpt.qn.mes.inventory.application.dto.stockbalance.StockBalanceResponse;
-import fpt.qn.mes.inventory.application.dto.stockbalance.search.StockBalanceSearchRequest;
-import fpt.qn.mes.inventory.application.dto.stockmovement.search.StockMovementSearchRequest;
-import fpt.qn.mes.inventory.application.dto.stockadjustment.StockAdjustmentResponse;
-import fpt.qn.mes.inventory.application.dto.stockmovement.StockMovementResponse;
-import fpt.qn.mes.inventory.application.dto.stocklot.StockLotResponse;
-
 
 @Service
 @RequiredArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
-@Slf4j
 public class InventoryService implements InventoryUseCase {
 
     StockLotRepository lotRepository;
-    LotTypeRepository lotTypeRepository;
     StockMovementRepository movementRepository;
     StockBalanceRepository balanceRepository;
     MovementTypeRepository movementTypeRepository;
     StockStatusRepository stockStatusRepository;
-    UserRepository userRepository;
     StockAdjustmentApprovalRepository approvalRepository;
     InventoryDtoMapper mapper;
     StockAdjustmentApprovalDtoMapper approvalMapper;
-    WarehouseUseCase warehouseUseCase;
-    ProductUseCase productUseCase;
-    WarehouseLocationUseCase warehouseLocationUseCase;
+    CurrentUserPort currentUserPort;
+    ProductCheckPort productCheckPort;
+    WarehouseCheckPort warehouseCheckPort;
+    WarehouseLocationCheckPort warehouseLocationCheckPort;
+    WarehouseLocationQueryPort warehouseLocationQueryPort;
 
     private static final BigDecimal ADJUSTMENT_THRESHOLD = new BigDecimal("100.00");
-
-    @Override
-    @Transactional(readOnly = true)
-    public PageResponse<StockLotResponse> getStockLots(StockLotSearchRequest request) {
-        StockLotSearchCriteria criteria = StockLotSearchCriteria.builder()
-                .productId(request != null ? request.getProductId() : null)
-                .lotTypeId(request != null ? request.getLotTypeId() : null)
-                .lotNumber(request != null ? request.getLotNumber() : null)
-                .expiryBefore(request != null ? request.getExpiryBefore() : null)
-                .page(request != null ? request.getPage() : 0)
-                .size(request != null ? request.getSize() : 20)
-                .sort(request != null && request.getSort() != null ? request.getSort() : List.of())
-                .build();
-        long totalElements = lotRepository.count(criteria);
-        List<StockLot> items = lotRepository.search(criteria);
-        List<StockLotResponse> dtos = items.stream().map(mapper::toDto).toList();
-        return PageResponse.of(dtos, totalElements, request != null ? request.getPage() : 0, request != null ? request.getSize() : 20);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public StockLotResponse getStockLotById(UUID id) {
-        StockLot lot = lotRepository.findById(id)
-                .orElseThrow(() -> new StockLotNotFoundException("Stock lot not found with ID: " + id));
-        return mapper.toDto(lot);
-    }
-
-    @Override
-    @Transactional
-    public void createStockLot(CreateStockLotRequest request) {
-        Optional<StockLot> existingLot = lotRepository.findByLotNumber(request.getLotNumber());
-        if (existingLot.isPresent()) {
-            StockLot lot = existingLot.get();
-            if (!request.getProductId().equals(lot.getProductId())) {
-                throw new InvalidStockLotException(
-                        "Stock lot '" + request.getLotNumber() + "' belongs to a different product");
-            }
-            throw new StockLotConflictException(
-                    "Stock lot '" + request.getLotNumber() + "' already exists");
-        }
-
-        StockLot lot = StockLot.create(
-                request.getLotNumber(),
-                request.getProductId(),
-                request.getLotTypeId(),
-                request.getExpiryDate()
-        );
-        lotRepository.save(lot);
-    }
 
     @Override
     @Transactional(readOnly = true)
@@ -157,81 +89,60 @@ public class InventoryService implements InventoryUseCase {
                 .sort(request != null && request.getSort() != null ? request.getSort() : List.of())
                 .build();
 
-        long totalElements = movementRepository.count(criteria);
-        List<StockMovement> items = movementRepository.search(criteria);
-
-        if (items.isEmpty()) {
-            return PageResponse.of(List.of(), totalElements, request != null ? request.getPage() : 0, request != null ? request.getSize() : 20);
-        }
-
-        Map<UUID, ProductResponse> productMap = buildProductMap(items);
-        Map<UUID, WarehouseResponse> warehouseMap = buildWarehouseMap(items);
-        Map<UUID, WarehouseLocationResponse> locationMap = buildLocationMap(items);
-        Map<UUID, UserResponse> userMap = buildUserMap(items);
-
-        List<StockMovementResponse> dtos = items.stream()
-                .map(m -> populateMovementSummaryFields(m, productMap, warehouseMap, locationMap, userMap))
-                .toList();
-
-        return PageResponse.of(dtos, totalElements, request != null ? request.getPage() : 0, request != null ? request.getSize() : 20);
+        long total = movementRepository.count(criteria);
+        List<StockMovementResponse> dtos = movementRepository.search(criteria).stream()
+                .map(m -> mapper.toDto(m))
+                .collect(Collectors.toList());
+        return PageResponse.of(dtos, total, request != null ? request.getPage() : 0, request != null ? request.getSize() : 20);
     }
 
     @Override
     @Transactional
-    public void recordMovement(CreateStockMovementRequest request, UUID currentUserId) {
+    public void recordMovement(CreateStockMovementRequest request) {
         if (request.getQuantity() == null || request.getQuantity().compareTo(BigDecimal.ZERO) <= 0) {
             throw new InsufficientStockException("Movement quantity must be positive");
         }
-
-        // Validate FK references — each getXxxById() throws NotFoundException if absent
-        warehouseUseCase.getWarehouseById(request.getWarehouseId());
-        productUseCase.getProductById(request.getProductId());
-        if (request.getLocationId() != null) {
-            warehouseLocationUseCase.getWarehouseLocationById(request.getLocationId());
+        if (!productCheckPort.existsById(request.getProductId())) {
+            throw new InventoryNotFoundException("Product not found: " + request.getProductId());
+        }
+        if (!warehouseCheckPort.existsById(request.getWarehouseId())) {
+            throw new InventoryNotFoundException("Warehouse not found: " + request.getWarehouseId());
+        }
+        if (request.getLocationId() != null && !warehouseLocationCheckPort.existsById(request.getLocationId())) {
+            throw new InventoryNotFoundException("Location not found: " + request.getLocationId());
         }
 
-        // 1. Handle deduction from source status balance if fromStatusId is present
+        UUID currentUserId = currentUserPort.getCurrentUserId();
+
         if (request.getFromStatusId() != null) {
             StockBalance fromBalance = balanceRepository.findForUpdate(
-                    request.getWarehouseId(),
-                    request.getLocationId(),
-                    request.getProductId(),
-                    request.getLotId(),
-                    request.getFromStatusId()
+                    request.getWarehouseId(), request.getLocationId(),
+                    request.getProductId(), request.getLotId(), request.getFromStatusId()
             ).orElseThrow(() -> new InsufficientStockException("Insufficient stock balance for this movement"));
-
             fromBalance.deductQuantity(request.getQuantity());
             balanceRepository.save(fromBalance);
         }
 
-        // 2. Handle addition to destination status balance if toStatusId is present
         if (request.getToStatusId() != null) {
             Optional<StockBalance> optToBalance = balanceRepository.findForUpdate(
-                    request.getWarehouseId(),
-                    request.getLocationId(),
-                    request.getProductId(),
-                    request.getLotId(),
-                    request.getToStatusId()
+                    request.getWarehouseId(), request.getLocationId(),
+                    request.getProductId(), request.getLotId(), request.getToStatusId()
             );
-
-            StockBalance toBalance;
-            if (optToBalance.isPresent()) {
-                toBalance = optToBalance.get();
-                toBalance.addQuantity(request.getQuantity());
-            } else {
-                toBalance = StockBalance.builder()
-                        .id(UuidV7.generate())
-                        .warehouseId(request.getWarehouseId())
-                        .locationId(request.getLocationId())
-                        .productId(request.getProductId())
-                        .lotId(request.getLotId())
-                        .stockStatusId(request.getToStatusId())
-                        .quantity(request.getQuantity())
-                        .version(1L)
-                        .createdAt(Instant.now())
-                        .updatedAt(Instant.now())
-                        .build();
-            }
+            StockBalance toBalance = optToBalance.map(b -> {
+                b.addQuantity(request.getQuantity());
+                return b;
+            }).orElse(StockBalance.builder()
+                    .id(UuidV7.generate())
+                    .warehouseId(request.getWarehouseId())
+                    .locationId(request.getLocationId())
+                    .productId(request.getProductId())
+                    .lotId(request.getLotId())
+                    .stockStatusId(request.getToStatusId())
+                    .quantity(request.getQuantity())
+                    .version(1L)
+                    .createdAt(Instant.now())
+                    .updatedAt(Instant.now())
+                    .build());
             balanceRepository.save(toBalance);
         }
 
@@ -240,24 +151,11 @@ public class InventoryService implements InventoryUseCase {
         UUID toWh = (request.getToStatusId() != null || request.getFromStatusId() == null) ? request.getWarehouseId() : null;
         UUID toLoc = (request.getToStatusId() != null || request.getFromStatusId() == null) ? request.getLocationId() : null;
 
-
-        StockMovement movement = StockMovement.create(
-                request.getMovementTypeId(),
-                request.getProductId(),
-                request.getLotId(),
-                fromWh,
-                fromLoc,
-                toWh,
-                toLoc,
-                request.getQuantity(),
-                request.getFromStatusId(),
-                request.getToStatusId(),
-                request.getReferenceNo(),
-                request.getReason(),
-                currentUserId
-        );
-
-        movementRepository.save(movement);
+        movementRepository.save(StockMovement.create(
+                request.getMovementTypeId(), request.getProductId(), request.getLotId(),
+                fromWh, fromLoc, toWh, toLoc, request.getQuantity(),
+                request.getFromStatusId(), request.getToStatusId(),
+                request.getReferenceNo(), request.getReason(), currentUserId));
     }
 
     @Override
@@ -273,22 +171,28 @@ public class InventoryService implements InventoryUseCase {
                 .size(request != null ? request.getSize() : 20)
                 .sort(request != null && request.getSort() != null ? request.getSort() : List.of())
                 .build();
-        long totalElements = balanceRepository.count(criteria);
-        List<StockBalance> balances = balanceRepository.search(criteria);
-        List<StockBalanceResponse> dtos = balances.stream().map(mapper::toDto).toList();
-        return PageResponse.of(dtos, totalElements, request != null ? request.getPage() : 0, request != null ? request.getSize() : 20);
+        long total = balanceRepository.count(criteria);
+        List<StockBalanceResponse> dtos = balanceRepository.search(criteria).stream()
+                .map(b -> mapper.toDto(b))
+                .collect(Collectors.toList());
+        return PageResponse.of(dtos, total, request != null ? request.getPage() : 0, request != null ? request.getSize() : 20);
     }
 
     @Override
     @Transactional
-    public void recordStockIn(StockInRequest request, UUID currentUserId) {
+    public void recordStockIn(StockInRequest request) {
+        if (!productCheckPort.existsById(request.getProductId())) {
+            throw new InventoryNotFoundException("Product not found: " + request.getProductId());
+        }
+        if (!warehouseCheckPort.existsById(request.getWarehouseId())) {
+            throw new InventoryNotFoundException("Warehouse not found: " + request.getWarehouseId());
+        }
+        if (!warehouseLocationCheckPort.existsById(request.getLocationId())) {
+            throw new InventoryNotFoundException("Location not found: " + request.getLocationId());
+        }
 
-        // Validate master data references
-        productUseCase.getProductById(request.getProductId());
-        warehouseUseCase.getWarehouseById(request.getWarehouseId());
-        warehouseLocationUseCase.getWarehouseLocationById(request.getLocationId());
+        UUID currentUserId = currentUserPort.getCurrentUserId();
 
-        // Resolve or create StockLot with lotNumber uniqueness / product ownership validation
         StockLot lot;
         Optional<StockLot> optExistingLot = lotRepository.findByLotNumber(request.getLotNumber());
         if (optExistingLot.isPresent()) {
@@ -298,555 +202,219 @@ public class InventoryService implements InventoryUseCase {
                         "Stock lot '" + request.getLotNumber() + "' belongs to a different product");
             }
         } else {
-            StockLot newLot = StockLot.create(
-                    request.getLotNumber(),
-                    request.getProductId(),
-                    request.getLotTypeId(),
-                    request.getExpiryDate()
-            );
-            lot = lotRepository.save(newLot);
+            lot = lotRepository.save(StockLot.create(
+                    request.getLotNumber(), request.getProductId(),
+                    request.getLotTypeId(), request.getExpiryDate(), currentUserId));
         }
 
-        // Determine stock status (defaulting to AVAILABLE)
         UUID statusId = stockStatusRepository.findIdByName(StockStatusConstants.AVAILABLE)
                 .orElseThrow(() -> new InventoryNotFoundException("Stock status AVAILABLE not found"));
-
-        // Lookup movement type ID for PURCHASE_IN
         UUID purchaseInTypeId = movementTypeRepository.findIdByName(MovementTypeConstants.PURCHASE_IN)
                 .orElseThrow(() -> new InventoryNotFoundException("Movement type PURCHASE_IN not found"));
 
-        // Find or create StockBalance for UPDATE
         Optional<StockBalance> optBalance = balanceRepository.findForUpdate(
-                request.getWarehouseId(),
-                request.getLocationId(),
-                request.getProductId(),
-                lot.getId(),
-                statusId
-        );
+                request.getWarehouseId(), request.getLocationId(),
+                request.getProductId(), lot.getId(), statusId);
 
-        BigDecimal currentOnHand = optBalance.map(StockBalance::getQuantity).orElse(BigDecimal.ZERO);
-        BigDecimal newQuantity = currentOnHand.add(request.getQuantity());
+        BigDecimal newQty = optBalance.map(b -> b.getQuantity()).orElse(BigDecimal.ZERO).add(request.getQuantity());
 
-        StockBalance balanceToSave = StockBalance.builder()
+        balanceRepository.save(StockBalance.builder()
                 .id(optBalance.map(b -> b.getId()).orElse(UuidV7.generate()))
                 .warehouseId(request.getWarehouseId())
                 .locationId(request.getLocationId())
                 .productId(request.getProductId())
                 .lotId(lot.getId())
                 .stockStatusId(statusId)
-                .quantity(newQuantity)
+                .quantity(newQty)
                 .version(optBalance.map(b -> b.getVersion() == null ? 1L : b.getVersion() + 1).orElse(1L))
-                .createdAt(optBalance.map(StockBalance::getCreatedAt).orElse(Instant.now()))
+                .createdAt(optBalance.map(b -> b.getCreatedAt()).orElse(Instant.now()))
                 .updatedAt(Instant.now())
-                .build();
+                .build());
 
-        balanceRepository.save(balanceToSave);
-
-        // Record stock movement ledger entry
-        StockMovement movement = StockMovement.create(
-                purchaseInTypeId,
-                request.getProductId(),
-                lot.getId(),
-                null,
-                null,
-                request.getWarehouseId(),
-                request.getLocationId(),
-                request.getQuantity(),
-                null,
-                statusId,
-                request.getReferenceNo(),
-                request.getReason(),
-                currentUserId
-        );
-
-        movementRepository.save(movement);
-    }
-
-    private Map<UUID, ProductResponse> buildProductMap(List<StockMovement> items) {
-        Set<UUID> ids = items.stream().map(StockMovement::getProductId).filter(Objects::nonNull).collect(Collectors.toSet());
-        if (ids.isEmpty()) return Map.of();
-        java.util.Map<UUID, ProductResponse> map = new java.util.HashMap<>();
-        for (UUID id : ids) {
-            try {
-                fpt.qn.mes.master.product.application.dto.product.ProductResponse m = productUseCase.getProductById(id);
-                map.put(id, ProductResponse.builder().id(m.getId()).code(m.getCode()).name(m.getName()).build());
-            } catch (Exception e) {
-                log.warn("Product not found: " + id);
-            }
-        }
-        return map;
-    }
-
-    private Map<UUID, WarehouseResponse> buildWarehouseMap(List<StockMovement> items) {
-        Set<UUID> ids = items.stream()
-                .flatMap(m -> Stream.<UUID>of(m.getFromWarehouseId(), m.getToWarehouseId(), m.getWarehouseId()))
-                .filter(Objects::nonNull)
-                .collect(Collectors.toSet());
-        if (ids.isEmpty()) return Map.of();
-        java.util.Map<UUID, WarehouseResponse> map = new java.util.HashMap<>();
-        for (UUID id : ids) {
-            try {
-                fpt.qn.mes.master.warehouse.application.dto.warehouse.WarehouseResponse m = warehouseUseCase.getWarehouseById(id);
-                map.put(id, WarehouseResponse.builder().id(m.getId()).code(m.getCode()).name(m.getName()).build());
-            } catch (Exception e) {
-                log.warn("Warehouse not found: " + id);
-            }
-        }
-        return map;
-    }
-
-    private Map<UUID, WarehouseLocationResponse> buildLocationMap(List<StockMovement> items) {
-        Set<UUID> ids = items.stream()
-                .flatMap(m -> Stream.<UUID>of(m.getFromLocationId(), m.getToLocationId(), m.getLocationId()))
-                .filter(Objects::nonNull)
-                .collect(Collectors.toSet());
-        if (ids.isEmpty()) return Map.of();
-        java.util.Map<UUID, WarehouseLocationResponse> map = new java.util.HashMap<>();
-        for (UUID id : ids) {
-            try {
-                fpt.qn.mes.master.location.application.dto.warehouselocation.WarehouseLocationResponse m = warehouseLocationUseCase.getWarehouseLocationById(id);
-                map.put(id, WarehouseLocationResponse.builder().id(m.getId()).code(m.getCode()).name(m.getName()).build());
-            } catch (Exception e) {
-                log.warn("Location not found: " + id);
-            }
-        }
-        return map;
-    }
-
-    private Map<UUID, UserResponse> buildUserMap(List<StockMovement> items) {
-        Set<UUID> ids = items.stream().map(StockMovement::getCreatedBy).filter(Objects::nonNull).collect(Collectors.toSet());
-        if (ids.isEmpty()) return Map.of();
-        return ids.stream()
-                .map(userRepository::findById)
-                .filter(Objects::nonNull)
-                .flatMap(Optional::stream)
-                .collect(Collectors.toMap(User::getId, user -> UserResponse.builder().id(user.getId()).username(user.getUsername()).fullName(user.getFullName()).build(), (u1, u2) -> u1));
-    }
-
-    private StockMovementResponse populateMovementSummaryFields(
-            StockMovement m,
-            Map<UUID, ProductResponse> productMap,
-            Map<UUID, WarehouseResponse> warehouseMap,
-            Map<UUID, WarehouseLocationResponse> locationMap,
-            Map<UUID, UserResponse> userMap) {
-        StockMovementResponse dto = mapper.toDto(m);
-        if (dto != null && m != null) {
-            if (m.getProductId() != null) {
-                dto.setProduct(productMap.get(m.getProductId()));
-            }
-            if (m.getFromWarehouseId() != null) {
-                dto.setFromWarehouse(warehouseMap.get(m.getFromWarehouseId()));
-            }
-            if (m.getToWarehouseId() != null) {
-                dto.setToWarehouse(warehouseMap.get(m.getToWarehouseId()));
-            }
-            if (m.getFromLocationId() != null) {
-                dto.setFromLocation(locationMap.get(m.getFromLocationId()));
-            }
-            if (m.getToLocationId() != null) {
-                dto.setToLocation(locationMap.get(m.getToLocationId()));
-            }
-            if (m.getCreatedBy() != null) {
-                dto.setCreatedBy(userMap.get(m.getCreatedBy()));
-            }
-        }
-        return dto;
-    }
-
-    private StockMovementResponse enrichMovementDto(StockMovement m) {
-        if (m == null) return null;
-        List<StockMovement> items = List.of(m);
-        Map<UUID, ProductResponse> productMap = buildProductMap(items);
-        Map<UUID, WarehouseResponse> warehouseMap = buildWarehouseMap(items);
-        Map<UUID, WarehouseLocationResponse> locationMap = buildLocationMap(items);
-        Map<UUID, UserResponse> userMap = buildUserMap(items);
-        return populateMovementSummaryFields(m, productMap, warehouseMap, locationMap, userMap);
+        movementRepository.save(StockMovement.create(
+                purchaseInTypeId, request.getProductId(), lot.getId(),
+                null, null, request.getWarehouseId(), request.getLocationId(),
+                request.getQuantity(), null, statusId,
+                request.getReferenceNo(), request.getReason(), currentUserId));
     }
 
     @Override
     @Transactional
-    public void adjustStock(CreateStockAdjustmentRequest request, UUID currentUserId) {
-        if (request == null) {
-            throw new InvalidStockAdjustmentException("Request body is required");
-        }
-        if (request.getReason() == null || request.getReason().isBlank()) {
+    public void adjustStock(CreateStockAdjustmentRequest request) {
+        if (request == null) throw new InvalidStockAdjustmentException("Request body is required");
+        if (request.getReason() == null || request.getReason().isBlank())
             throw new InvalidStockAdjustmentException("Reason is required for stock adjustment");
-        }
-        if (request.getStockBalanceId() == null) {
+        if (request.getStockBalanceId() == null)
             throw new InvalidStockAdjustmentException("Stock balance ID is required");
-        }
-        if (request.getQuantityAdjustment() == null) {
+        if (request.getQuantityAdjustment() == null)
             throw new InvalidStockAdjustmentException("Quantity adjustment is required");
-        }
 
         StockBalance balance = balanceRepository.findById(request.getStockBalanceId())
-                .orElseThrow(() -> new InventoryNotFoundException("Stock balance not found with ID: " + request.getStockBalanceId()));
+                .orElseThrow(() -> new InventoryNotFoundException("Stock balance not found: " + request.getStockBalanceId()));
 
-        BigDecimal resultingQuantity = balance.getQuantity().add(request.getQuantityAdjustment());
-        if (resultingQuantity.compareTo(BigDecimal.ZERO) < 0) {
+        BigDecimal result = balance.getQuantity().add(request.getQuantityAdjustment());
+        if (result.compareTo(BigDecimal.ZERO) < 0)
             throw new InvalidStockAdjustmentException("Adjustment cannot result in negative stock balance");
-        }
 
-        BigDecimal adjustmentAbs = request.getQuantityAdjustment().abs();
-        boolean requiresApproval = adjustmentAbs.compareTo(ADJUSTMENT_THRESHOLD) > 0;
+        UUID currentUserId = currentUserPort.getCurrentUserId();
 
-        if (requiresApproval) {
-            StockAdjustmentApproval approval = StockAdjustmentApproval.create(
-                    balance.getProductId(),
-                    balance.getWarehouseId(),
-                    balance.getLocationId(),
-                    balance.getId(),
-                    request.getQuantityAdjustment(),
-                    request.getReason(),
-                    request.getReferenceNo(),
-                    currentUserId
-            );
-            StockAdjustmentApproval savedApproval = approvalRepository.save(approval);
+        if (request.getQuantityAdjustment().abs().compareTo(ADJUSTMENT_THRESHOLD) > 0) {
+            approvalRepository.save(StockAdjustmentApproval.create(
+                    balance.getProductId(), balance.getWarehouseId(), balance.getLocationId(),
+                    balance.getId(), request.getQuantityAdjustment(),
+                    request.getReason(), request.getReferenceNo(), currentUserId));
             return;
         }
 
-        StockBalance updatedBalance = StockBalance.builder()
+        balanceRepository.save(StockBalance.builder()
                 .id(balance.getId())
-                .warehouseId(balance.getWarehouseId())
-                .locationId(balance.getLocationId())
-                .productId(balance.getProductId())
-                .lotId(balance.getLotId())
-                .stockStatusId(balance.getStockStatusId())
-                .quantity(resultingQuantity)
+                .warehouseId(balance.getWarehouseId()).locationId(balance.getLocationId())
+                .productId(balance.getProductId()).lotId(balance.getLotId())
+                .stockStatusId(balance.getStockStatusId()).quantity(result)
                 .version(balance.getVersion() == null ? 1L : balance.getVersion() + 1)
-                .createdAt(balance.getCreatedAt())
-                .updatedAt(Instant.now())
-                .build();
-        balanceRepository.save(updatedBalance);
+                .createdAt(balance.getCreatedAt()).updatedAt(Instant.now())
+                .build());
 
         UUID adjustmentTypeId = movementTypeRepository.findIdByName(MovementTypeConstants.ADJUSTMENT)
                 .orElseThrow(() -> new InventoryNotFoundException("Movement type ADJUSTMENT not found"));
 
-        StockMovement movement;
-        if (request.getQuantityAdjustment().compareTo(BigDecimal.ZERO) > 0) {
-            movement = StockMovement.create(
-                    adjustmentTypeId,
-                    balance.getProductId(),
-                    balance.getLotId(),
-                    null,
-                    null,
-                    balance.getWarehouseId(),
-                    balance.getLocationId(),
-                    adjustmentAbs,
-                    balance.getStockStatusId(),
-                    balance.getStockStatusId(),
-                    request.getReferenceNo(),
-                    request.getReason(),
-                    currentUserId
-            );
-        } else {
-            movement = StockMovement.create(
-                    adjustmentTypeId,
-                    balance.getProductId(),
-                    balance.getLotId(),
-                    balance.getWarehouseId(),
-                    balance.getLocationId(),
-                    null,
-                    null,
-                    adjustmentAbs,
-                    balance.getStockStatusId(),
-                    balance.getStockStatusId(),
-                    request.getReferenceNo(),
-                    request.getReason(),
-                    currentUserId
-            );
-        }
-
-         
-        StockMovement savedMovement = movementRepository.save(movement);
-        StockMovementResponse movementDto = enrichMovementDto(savedMovement);
-
-        return;
+        BigDecimal abs = request.getQuantityAdjustment().abs();
+        boolean positive = request.getQuantityAdjustment().compareTo(BigDecimal.ZERO) > 0;
+        movementRepository.save(StockMovement.create(
+                adjustmentTypeId, balance.getProductId(), balance.getLotId(),
+                positive ? null : balance.getWarehouseId(),
+                positive ? null : balance.getLocationId(),
+                positive ? balance.getWarehouseId() : null,
+                positive ? balance.getLocationId() : null,
+                abs, balance.getStockStatusId(), balance.getStockStatusId(),
+                request.getReferenceNo(), request.getReason(), currentUserId));
     }
 
     @Override
     @Transactional(readOnly = true)
     public PageResponse<StockAdjustmentApprovalResponse> getPendingAdjustments(StockAdjustmentApprovalSearchCriteria criteria) {
-        if (criteria == null) {
-            criteria = StockAdjustmentApprovalSearchCriteria.builder().page(0).size(20).build();
-        }
-        long totalElements = approvalRepository.count(criteria);
-        List<StockAdjustmentApproval> pendingList = approvalRepository.search(criteria);
-
-        Map<UUID, ProductResponse> productMap = buildApprovalProductMap(pendingList);
-        Map<UUID, WarehouseResponse> warehouseMap = buildApprovalWarehouseMap(pendingList);
-        Map<UUID, WarehouseLocationResponse> locationMap = buildApprovalLocationMap(pendingList);
-        Map<UUID, UserResponse> userMap = buildApprovalUserMap(pendingList);
-
-        List<StockAdjustmentApprovalResponse> dtos = pendingList.stream()
-                .map(approval -> populateApprovalSummaryFields(approval, productMap, warehouseMap, locationMap, userMap))
-                .toList();
-
-        return PageResponse.of(dtos, totalElements, criteria.getPage(), criteria.getSize());
-    }
-
-    private Map<UUID, ProductResponse> buildApprovalProductMap(List<StockAdjustmentApproval> items) {
-        Set<UUID> ids = items.stream().map(StockAdjustmentApproval::getProductId).filter(Objects::nonNull).collect(Collectors.toSet());
-        if (ids.isEmpty()) return Map.of();
-        java.util.Map<UUID, ProductResponse> map = new java.util.HashMap<>();
-        for (UUID id : ids) {
-            try {
-                fpt.qn.mes.master.product.application.dto.product.ProductResponse m = productUseCase.getProductById(id);
-                map.put(id, ProductResponse.builder().id(m.getId()).code(m.getCode()).name(m.getName()).build());
-            } catch (Exception e) {
-                log.warn("Product not found: " + id);
-            }
-        }
-        return map;
-    }
-
-    private Map<UUID, WarehouseResponse> buildApprovalWarehouseMap(List<StockAdjustmentApproval> items) {
-        Set<UUID> ids = items.stream().map(StockAdjustmentApproval::getWarehouseId).filter(Objects::nonNull).collect(Collectors.toSet());
-        if (ids.isEmpty()) return Map.of();
-        java.util.Map<UUID, WarehouseResponse> map = new java.util.HashMap<>();
-        for (UUID id : ids) {
-            try {
-                fpt.qn.mes.master.warehouse.application.dto.warehouse.WarehouseResponse m = warehouseUseCase.getWarehouseById(id);
-                map.put(id, WarehouseResponse.builder().id(m.getId()).code(m.getCode()).name(m.getName()).build());
-            } catch (Exception e) {
-                log.warn("Warehouse not found: " + id);
-            }
-        }
-        return map;
-    }
-
-    private Map<UUID, WarehouseLocationResponse> buildApprovalLocationMap(List<StockAdjustmentApproval> items) {
-        Set<UUID> ids = items.stream().map(StockAdjustmentApproval::getLocationId).filter(Objects::nonNull).collect(Collectors.toSet());
-        if (ids.isEmpty()) return Map.of();
-        java.util.Map<UUID, WarehouseLocationResponse> map = new java.util.HashMap<>();
-        for (UUID id : ids) {
-            try {
-                fpt.qn.mes.master.location.application.dto.warehouselocation.WarehouseLocationResponse m = warehouseLocationUseCase.getWarehouseLocationById(id);
-                map.put(id, WarehouseLocationResponse.builder().id(m.getId()).code(m.getCode()).name(m.getName()).build());
-            } catch (Exception e) {
-                log.warn("Location not found: " + id);
-            }
-        }
-        return map;
-    }
-
-    private Map<UUID, UserResponse> buildApprovalUserMap(List<StockAdjustmentApproval> items) {
-        Set<UUID> ids = items.stream().map(StockAdjustmentApproval::getCreatedBy).filter(Objects::nonNull).collect(Collectors.toSet());
-        if (ids.isEmpty()) return Map.of();
-        return ids.stream()
-                .map(userRepository::findById)
-                .filter(Objects::nonNull)
-                .flatMap(Optional::stream)
-                .collect(Collectors.toMap(User::getId, user -> UserResponse.builder().id(user.getId()).username(user.getUsername()).fullName(user.getFullName()).build(), (u1, u2) -> u1));
-    }
-
-    private StockAdjustmentApprovalResponse populateApprovalSummaryFields(
-            StockAdjustmentApproval approval,
-            Map<UUID, ProductResponse> productMap,
-            Map<UUID, WarehouseResponse> warehouseMap,
-            Map<UUID, WarehouseLocationResponse> locationMap,
-            Map<UUID, UserResponse> userMap) {
-        if (approval == null) {
-            return null;
-        }
-        StockAdjustmentApprovalResponse dto = approvalMapper.toDto(approval);
-        if (dto != null) {
-            if (approval.getProductId() != null && productMap != null) {
-                dto.setProduct(productMap.get(approval.getProductId()));
-            }
-            if (approval.getWarehouseId() != null && warehouseMap != null) {
-                dto.setWarehouse(warehouseMap.get(approval.getWarehouseId()));
-            }
-            if (approval.getLocationId() != null && locationMap != null) {
-                dto.setLocation(locationMap.get(approval.getLocationId()));
-            }
-            if (approval.getCreatedBy() != null && userMap != null) {
-                dto.setCreator(userMap.get(approval.getCreatedBy()));
-            }
-        }
-        return dto;
+        if (criteria == null) criteria = StockAdjustmentApprovalSearchCriteria.builder().page(0).size(20).build();
+        long total = approvalRepository.count(criteria);
+        List<StockAdjustmentApprovalResponse> dtos = approvalRepository.search(criteria).stream()
+                .map(a -> approvalMapper.toDto(a))
+                .collect(Collectors.toList());
+        return PageResponse.of(dtos, total, criteria.getPage(), criteria.getSize());
     }
 
     @Override
     @Transactional
-    public StockMovementResponse approveAdjustment(UUID approvalId, UUID currentUserId) {
+    public StockMovementResponse approveAdjustment(UUID approvalId) {
         StockAdjustmentApproval approval = approvalRepository.findById(approvalId)
-                .orElseThrow(() -> new InventoryNotFoundException("Pending adjustment request not found with ID: " + approvalId));
+                .orElseThrow(() -> new InventoryNotFoundException("Pending adjustment not found: " + approvalId));
 
         StockBalance balance = balanceRepository.findById(approval.getStockBalanceId())
-                .orElseThrow(() -> new InventoryNotFoundException("Stock balance not found with ID: " + approval.getStockBalanceId()));
+                .orElseThrow(() -> new InventoryNotFoundException("Stock balance not found: " + approval.getStockBalanceId()));
 
-        BigDecimal resultingQuantity = balance.getQuantity().add(approval.getQuantityAdjustment());
-        if (resultingQuantity.compareTo(BigDecimal.ZERO) < 0) {
+        BigDecimal result = balance.getQuantity().add(approval.getQuantityAdjustment());
+        if (result.compareTo(BigDecimal.ZERO) < 0)
             throw new InvalidStockAdjustmentException("Adjustment cannot result in negative stock balance");
-        }
 
-        StockBalance updatedBalance = StockBalance.builder()
+        balanceRepository.save(StockBalance.builder()
                 .id(balance.getId())
-                .warehouseId(balance.getWarehouseId())
-                .locationId(balance.getLocationId())
-                .productId(balance.getProductId())
-                .lotId(balance.getLotId())
-                .stockStatusId(balance.getStockStatusId())
-                .quantity(resultingQuantity)
+                .warehouseId(balance.getWarehouseId()).locationId(balance.getLocationId())
+                .productId(balance.getProductId()).lotId(balance.getLotId())
+                .stockStatusId(balance.getStockStatusId()).quantity(result)
                 .version(balance.getVersion() == null ? 1L : balance.getVersion() + 1)
-                .createdAt(balance.getCreatedAt())
-                .updatedAt(Instant.now())
-                .build();
-        balanceRepository.save(updatedBalance);
+                .createdAt(balance.getCreatedAt()).updatedAt(Instant.now())
+                .build());
 
         UUID adjustmentTypeId = movementTypeRepository.findIdByName(MovementTypeConstants.ADJUSTMENT)
                 .orElseThrow(() -> new InventoryNotFoundException("Movement type ADJUSTMENT not found"));
 
-        UUID fromWh = approval.getQuantityAdjustment().compareTo(BigDecimal.ZERO) < 0 ? balance.getWarehouseId() : null;
-        UUID fromLoc = approval.getQuantityAdjustment().compareTo(BigDecimal.ZERO) < 0 ? balance.getLocationId() : null;
-        UUID toWh = approval.getQuantityAdjustment().compareTo(BigDecimal.ZERO) > 0 ? balance.getWarehouseId() : null;
-        UUID toLoc = approval.getQuantityAdjustment().compareTo(BigDecimal.ZERO) > 0 ? balance.getLocationId() : null;
-
-        StockMovement movement = StockMovement.create(
-                adjustmentTypeId,
-                balance.getProductId(),
-                balance.getLotId(),
-                fromWh,
-                fromLoc,
-                toWh,
-                toLoc,
+        UUID currentUserId = currentUserPort.getCurrentUserId();
+        boolean positive = approval.getQuantityAdjustment().compareTo(BigDecimal.ZERO) > 0;
+        StockMovement saved = movementRepository.save(StockMovement.create(
+                adjustmentTypeId, balance.getProductId(), balance.getLotId(),
+                positive ? null : balance.getWarehouseId(),
+                positive ? null : balance.getLocationId(),
+                positive ? balance.getWarehouseId() : null,
+                positive ? balance.getLocationId() : null,
                 approval.getQuantityAdjustment().abs(),
-                balance.getStockStatusId(),
-                balance.getStockStatusId(),
-                approval.getReferenceNo(),
-                approval.getReason(),
-                currentUserId
-        );
-        StockMovement savedMovement = movementRepository.save(movement);
+                balance.getStockStatusId(), balance.getStockStatusId(),
+                approval.getReferenceNo(), approval.getReason(), currentUserId));
 
         approvalRepository.deleteById(approvalId);
 
-        return enrichMovementDto(savedMovement);
+        return movementRepository.findById(saved.getId())
+                .map(m -> mapper.toDto(m))
+                .orElse(mapper.toDto(saved));
     }
 
     @Override
     @Transactional
-    public void rejectAdjustment(UUID approvalId, UUID currentUserId) {
-        StockAdjustmentApproval approval = approvalRepository.findById(approvalId)
-                .orElseThrow(() -> new InventoryNotFoundException("Pending adjustment request not found with ID: " + approvalId));
-
+    public void rejectAdjustment(UUID approvalId) {
+        approvalRepository.findById(approvalId)
+                .orElseThrow(() -> new InventoryNotFoundException("Pending adjustment not found: " + approvalId));
         approvalRepository.deleteById(approvalId);
     }
 
-    
-
-    
-
-    
-
     @Override
     @Transactional
-    public StockTransferResponse transferStock(
-            StockTransferRequest request, UUID currentUserId) {
-        if (request == null) {
-            throw new IllegalArgumentException("Stock transfer request cannot be null");
-        }
-        if (request.getQuantity() == null || request.getQuantity().compareTo(BigDecimal.ZERO) <= 0) {
+    public StockTransferResponse transferStock(StockTransferRequest request) {
+        if (request == null) throw new IllegalArgumentException("Stock transfer request cannot be null");
+        if (request.getQuantity() == null || request.getQuantity().compareTo(BigDecimal.ZERO) <= 0)
             throw new IllegalArgumentException("Quantity must be greater than zero");
-        }
-        if (request.getFromLocationId() != null && request.getFromLocationId().equals(request.getToLocationId())) {
+        if (request.getFromLocationId() != null && request.getFromLocationId().equals(request.getToLocationId()))
             throw new IllegalArgumentException("Source and destination location cannot be the same");
-        }
 
-        var fromLoc = warehouseLocationUseCase.getWarehouseLocationById(request.getFromLocationId());
-        var toLoc = warehouseLocationUseCase.getWarehouseLocationById(request.getToLocationId());
-
-        if (!Objects.equals(fromLoc.getWarehouse().getId(), request.getFromWarehouseId())) {
+        if (!warehouseLocationQueryPort.belongsToWarehouse(request.getFromLocationId(), request.getFromWarehouseId()))
             throw new IllegalArgumentException("Source location does not belong to the specified source warehouse");
-        }
-
-        if (!Objects.equals(toLoc.getWarehouse().getId(), request.getToWarehouseId())) {
+        if (!warehouseLocationQueryPort.belongsToWarehouse(request.getToLocationId(), request.getToWarehouseId()))
             throw new IllegalArgumentException("Destination location does not belong to the specified destination warehouse");
-        }
 
         UUID availableStatusId = stockStatusRepository.findIdByName(StockStatusConstants.AVAILABLE)
                 .orElseThrow(() -> new InventoryNotFoundException("Stock status AVAILABLE not found"));
-
         UUID transferOutTypeId = movementTypeRepository.findIdByName(MovementTypeConstants.TRANSFER_OUT)
                 .orElseThrow(() -> new InventoryNotFoundException("Movement type TRANSFER_OUT not found"));
-
         UUID transferInTypeId = movementTypeRepository.findIdByName(MovementTypeConstants.TRANSFER_IN)
                 .orElseThrow(() -> new InventoryNotFoundException("Movement type TRANSFER_IN not found"));
 
+        StockBalance source = balanceRepository.findForUpdate(
+                request.getFromWarehouseId(), request.getFromLocationId(),
+                request.getProductId(), request.getLotId(), availableStatusId)
+                .orElseThrow(() -> new InsufficientStockException("Insufficient stock at source location"));
+        source.deductQuantity(request.getQuantity());
+        StockBalance updatedSource = balanceRepository.save(source);
 
-        StockBalance sourceBalance = balanceRepository.findForUpdate(
-                request.getFromWarehouseId(),
-                request.getFromLocationId(),
-                request.getProductId(),
-                request.getLotId(),
-                availableStatusId
-        ).orElseThrow(() -> new InsufficientStockException("Insufficient stock at source location"));
+        StockBalance dest = balanceRepository.findForUpdate(
+                request.getToWarehouseId(), request.getToLocationId(),
+                request.getProductId(), request.getLotId(), availableStatusId)
+                .orElse(StockBalance.builder()
+                        .id(UuidV7.generate())
+                        .warehouseId(request.getToWarehouseId()).locationId(request.getToLocationId())
+                        .productId(request.getProductId()).lotId(request.getLotId())
+                        .stockStatusId(availableStatusId).quantity(BigDecimal.ZERO)
+                        .version(1L).createdAt(Instant.now()).updatedAt(Instant.now())
+                        .build());
+        dest.addQuantity(request.getQuantity());
+        StockBalance updatedDest = balanceRepository.save(dest);
 
-        sourceBalance.deductQuantity(request.getQuantity());
-        StockBalance updatedSourceBalance = balanceRepository.save(sourceBalance);
+        UUID currentUserId = currentUserPort.getCurrentUserId();
 
-        StockBalance destBalance = balanceRepository.findForUpdate(
-                request.getToWarehouseId(),
-                request.getToLocationId(),
-                request.getProductId(),
-                request.getLotId(),
-                availableStatusId
-        ).orElse(StockBalance.builder()
-                .id(UuidV7.generate())
-                .warehouseId(request.getToWarehouseId())
-                .locationId(request.getToLocationId())
-                .productId(request.getProductId())
-                .lotId(request.getLotId())
-                .stockStatusId(availableStatusId)
-                .quantity(BigDecimal.ZERO)
-                .version(1L)
-                .createdAt(Instant.now())
-                .updatedAt(Instant.now())
-                .build());
+        StockMovement outMovement = movementRepository.save(StockMovement.create(
+                transferOutTypeId, request.getProductId(), request.getLotId(),
+                request.getFromWarehouseId(), request.getFromLocationId(),
+                request.getToWarehouseId(), request.getToLocationId(),
+                request.getQuantity(), availableStatusId, availableStatusId,
+                null, "Stock Transfer Out", currentUserId));
 
-        destBalance.addQuantity(request.getQuantity());
-        StockBalance updatedDestBalance = balanceRepository.save(destBalance);
-
-        StockMovement outMovement = StockMovement.create(
-                transferOutTypeId,
-                request.getProductId(),
-                request.getLotId(),
-                request.getFromWarehouseId(),
-                request.getFromLocationId(),
-                request.getToWarehouseId(),
-                request.getToLocationId(),
-                request.getQuantity(),
-                availableStatusId,
-                availableStatusId,
-                null,
-                "Stock Transfer Out",
-                currentUserId
-        );
-        StockMovement savedOutMovement = movementRepository.save(outMovement);
-
-        StockMovement inMovement = StockMovement.create(
-                transferInTypeId,
-                request.getProductId(),
-                request.getLotId(),
-                request.getFromWarehouseId(),
-                request.getFromLocationId(),
-                request.getToWarehouseId(),
-                request.getToLocationId(),
-                request.getQuantity(),
-                availableStatusId,
-                availableStatusId,
-                null,
-                "Stock Transfer In",
-                currentUserId
-        );
-        StockMovement savedInMovement = movementRepository.save(inMovement);
+        StockMovement inMovement = movementRepository.save(StockMovement.create(
+                transferInTypeId, request.getProductId(), request.getLotId(),
+                request.getFromWarehouseId(), request.getFromLocationId(),
+                request.getToWarehouseId(), request.getToLocationId(),
+                request.getQuantity(), availableStatusId, availableStatusId,
+                null, "Stock Transfer In", currentUserId));
 
         return StockTransferResponse.builder()
-                .transferOutMovement(mapper.toDto(savedOutMovement))
-                .transferInMovement(mapper.toDto(savedInMovement))
-                .sourceBalance(mapper.toDto(updatedSourceBalance))
-                .destinationBalance(mapper.toDto(updatedDestBalance))
+                .transferOutMovement(mapper.toDto(outMovement))
+                .transferInMovement(mapper.toDto(inMovement))
+                .sourceBalance(mapper.toDto(updatedSource))
+                .destinationBalance(mapper.toDto(updatedDest))
                 .build();
     }
 }
